--- a/src/components/selects/styles/singleSelect.css
+++ b/src/components/selects/styles/singleSelect.css
@@ -1,23 +1,23 @@
 .custom.solid-select-container {
-    color: #fa7f25;
+    color: #000000;
 }
 
 .custom .solid-select-control {
-    outline-color: #fca560;
-    border-color: #fca560;
+    outline-color: #d1d5db;
+    border-color: #d1d5db
 }
 
 .custom .solid-select-placeholder {
-    color: #fca560;
+    color: #d1d5db;
 }
 
 .custom .solid-select-option:hover {
-    background-color: #fa7f25;
+    background-color: #307ef2;
     color: #fff;
 }
 
 .custom .solid-select-option[data-focused=true] {
-    background-color: #fca560;
+    background-color: #307ef2;
     color: #fff;
 }
 
